gcc/testsuite/gcc.target/mips/abi-n64-long32-pic.c
/* { dg-options "-mabi=64 -mlong32 -fpic -O2" } */
/* { dg-error "is incompatible with" "" { target *-*-* } 0 } */
#include "abi-main.h"
